<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.signIn.LogInActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wavesOfFood"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/yeon_sung_regular"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/image"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliverFavoriteFood"
        android:letterSpacing="0.02"
        android:textSize="17sp"
        android:textColor="@color/green"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/yeon_sung_regular"
        app:layout_constraintStart_toStartOf="@id/text1"
        app:layout_constraintEnd_toEndOf="@id/text1"
        app:layout_constraintTop_toBottomOf="@id/text1"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:textSize="24sp"
        android:textColor="@color/green"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/yeon_sung_regular"
        app:layout_constraintStart_toStartOf="@id/text2"
        app:layout_constraintEnd_toEndOf="@id/text2"
        app:layout_constraintTop_toBottomOf="@id/text2"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
           android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintEnd_toEndOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/linear">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            app:fontFamily="@font/yeon_sung_regular"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueWith"
            app:fontFamily="@font/yeon_sung_regular"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:letterSpacing="0.05"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintEnd_toEndOf="@id/linear"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/facebookCardButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardElevation="1dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/black"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            app:layout_constraintStart_toStartOf="@id/linear"
            app:layout_constraintEnd_toStartOf="@id/googleCardButton"
            app:layout_constraintTop_toBottomOf="@id/linear2"
            app:strokeWidth="1dp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f1f2f6"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_regular"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="textStart"
                android:letterSpacing="0.02"
                android:text="@string/facebookText"
                android:textAllCaps="false"
                />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/googleCardButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_weight="1"
            app:strokeColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/facebookCardButton"
            app:layout_constraintEnd_toEndOf="@id/linear"
            app:layout_constraintTop_toBottomOf="@id/linear2"
            app:layout_constraintHorizontal_bias="0.5"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f1f2f6"
                android:drawableStart="@drawable/google"
                android:drawablePadding="10dp"
                android:fontFamily="@font/lato_regular"
                android:letterSpacing="0.02"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:text="@string/googleText"
                android:textAlignment="textStart"
                android:textAllCaps="false" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/logInButton"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:fontFamily="@font/yeon_sung_regular"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/linear3"
        app:layout_constraintStart_toStartOf="@id/linear3"
        app:layout_constraintTop_toBottomOf="@id/linear3"
        android:layout_marginTop="15dp"
        app:backgroundTint="@color/green"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/green"
        android:padding="2dp"
        android:letterSpacing="0.01"
        android:fontFamily="@font/yeon_sung_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/logInButton"
        app:layout_constraintEnd_toEndOf="@id/logInButton"
        app:layout_constraintTop_toBottomOf="@id/logInButton"
        app:layout_constraintVertical_bias="0.1"/>




</androidx.constraintlayout.widget.ConstraintLayout>