<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.CartFragment">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        app:fontFamily="@font/yeon_sung_regular"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/cart_layout"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/proceedButton"
        android:layout_marginBottom="@dimen/_10dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noCartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/noCart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/proceedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        app:elevation="@dimen/_10dp"
        android:visibility="gone"
        app:backgroundTint="@color/green2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartRecycleView"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>